--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,6 +1,8 @@
 # Specifies intentionally untracked files to ignore when using Git
 # http://git-scm.com/docs/gitignore
 
+npm-debug.log
 platforms/
 plugins/
+node_modules/
 www/lib/
