--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -4,6 +4,17 @@
   "dependencies": {
     "express": "~4.0.0",
     "mongoose": "~3.6.13",
-    "body-parser": "~1.0.1"
+    "body-parser": "~1.0.1",
+
+	"ejs" : "~0.8.5",         
+    "passport" : "~0.1.17",         
+    "passport-local" : "~0.1.6",
+    "connect-flash" : "~0.1.1",     
+    "bcrypt-nodejs" : "latest",
+
+    "morgan": "~1.0.0",
+    "cookie-parser": "~1.0.0",
+    "method-override": "~1.0.0"
+
   }
 }
