--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -2,19 +2,17 @@
   "name": "node-api",
   "main": "server.js",
   "dependencies": {
-    "express": "~4.0.0",
-    "mongoose": "~3.6.13",
+    "bcrypt-nodejs": "latest",
     "body-parser": "~1.0.1",
-
-	"ejs" : "~0.8.5",         
-    "passport" : "~0.1.17",         
-    "passport-local" : "~0.1.6",
-    "connect-flash" : "~0.1.1",     
-    "bcrypt-nodejs" : "latest",
-
-    "morgan": "~1.0.0",
+    "connect-flash": "~0.1.1",
     "cookie-parser": "~1.0.0",
-    "method-override": "~1.0.0"
-
+    "ejs": "~0.8.5",
+    "express": "~4.0.0",
+    "method-override": "~1.0.0",
+    "mongoose": "~3.6.13",
+    "morgan": "~1.0.0",
+    "passport": "~0.1.17",
+    "passport-http-bearer": "^1.0.1",
+    "passport-local": "~0.1.6"
   }
 }
